Using sqlalchemy for indexing files/episodes/anime in sqlite3 db Run main.py <anime dir> to index all the anime Run server.py and hit /index/anime to see your indexed stuff

--- a/templates/anime.html
+++ b/templates/anime.html
@@ -9,5 +9,12 @@
   <p class="description">
     {{ anime.getDescription() }}
   </p>
+  <ul class="files">
+    {% for file in files %}
+      <li>
+        {{ file.path }}
+      </li>
+    {% endfor %}
+  </ul>
 </div>
 {% endblock %}
