Wrote beginning nyaa class to find and donwload torrents from nyaa into a watch dir Update anime info template with links to try and download individual episodes

--- a/templates/anime.html
+++ b/templates/anime.html
@@ -19,9 +19,7 @@
           </p>
         {% else %}
           <p>
-            <a>
-              Need: Download link somehow
-            </a>
+            <a href="/download/{{ episode.id }}">Download this episode</a>
           </p>
         {% endif %}
       </li>
