--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,13 @@
     {% include "links.html" ignore missing %}
   </head>
   <body>
+    <div id="flash">
+        <ul>
+            {% for message in get_flashed_messages() %}
+                <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    </div>
 
     <header>
       {% include "header.html" ignore missing %}
