--- a/static/style.css
+++ b/static/style.css
@@ -1,36 +1,243 @@
-body, html {
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+.c1 {
+  display: inline-block;
+  width: 114.5px;
+  margin-left: 12px;
+  box-sizing: border-box;
+  float: left;
+}
+.c2 {
+  display: inline-block;
+  width: 241px;
+  margin-left: 12px;
+  box-sizing: border-box;
+  float: left;
+}
+.c3 {
+  display: inline-block;
+  width: 367.5px;
+  margin-left: 12px;
+  box-sizing: border-box;
+  float: left;
+}
+.c4 {
+  display: inline-block;
+  width: 494px;
+  margin-left: 12px;
+  box-sizing: border-box;
+  float: left;
+}
+.c5 {
+  display: inline-block;
+  width: 620.5px;
+  margin-left: 12px;
+  box-sizing: border-box;
+  float: left;
+}
+.c6 {
+  display: inline-block;
+  width: 747px;
+  margin-left: 12px;
+  box-sizing: border-box;
+  float: left;
+}
+.c7 {
+  display: inline-block;
+  width: 873.5px;
+  margin-left: 12px;
+  box-sizing: border-box;
+  float: left;
+}
+.c8 {
+  display: inline-block;
+  width: 1000px;
+  margin-left: 12px;
+  box-sizing: border-box;
+  float: left;
+}
+.first {
+  clear: both;
+  margin-left: 0;
+}
+body,
+html {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-
-  font-size: 12px;
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
 }
-
-header, div#content, footer {
-  width: 100em;
-  margin: 0 auto;
+h1 {
+  font-size: 3em;
+  font-weight: bold;
 }
-
-div#content {
-  padding: 0;
+h2 {
+  font-size: 2em;
+  font-weight: bold;
 }
-
-div#content h1.title {
-  text-align: center;
+h3 {
+  font-size: 1.5em;
+  font-weight: bold;
 }
-
-div#content img.cover {
-  display: inline-block;
-  width: 30em;
-  margin: 0 1em 0 0; 
+p {
+  margin-bottom: 1em;
 }
-
-div#content p.description {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  width: 65em;
-  text-align: justify;
-  vertical-align: top;
+header,
+div#content,
+footer {
+  width: 1000px;
+  margin: auto;
+}
+div#anime header {
+  position: relative;
+  overflow: hidden;
+  height: 20em;
+  margin-bottom: 1em;
+}
+div#anime header h2 {
+  position: absolute;
+  bottom: 1em;
+  left: 1em;
+  color: white;
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.5), -1px 1px rgba(0, 0, 0, 0.5), 1px -1px rgba(0, 0, 0, 0.5), -1px -1px rgba(0, 0, 0, 0.5);
+}
+div#anime header img {
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  right: 0;
+  top: -10em;
+}
+div#anime div#anime-sidebar img {
+  width: 100%;
 }
