--- a/static/anime.less
+++ b/static/anime.less
@@ -79,6 +79,13 @@ div#anime {
                         width: @icon-size;
                         height: @icon-size;
                         height: 100%;
+                        opacity: 0.5;
+                        transition: opacity 0.25s ease-in-out, background-size 0.25s ease-in-out;
+                        
+                        &:hover {
+                            opacity: 1;
+                            background-size: @icon-size*1.05 @icon-size*1.05;
+                        }
                         
                         &.owned {
                             background-image: url(icons/ic_action_collection.png);
