--- a/static/style.css
+++ b/static/style.css
@@ -316,6 +316,12 @@ div#anime div#anime-list ul#episodes li div.episode-state .icon {
   width: 2em;
   height: 2em;
   height: 100%;
+  opacity: 0.5;
+  transition: opacity 0.25s ease-in-out, background-size 0.25s ease-in-out;
+}
+div#anime div#anime-list ul#episodes li div.episode-state .icon:hover {
+  opacity: 1;
+  background-size: 2.1em 2.1em;
 }
 div#anime div#anime-list ul#episodes li div.episode-state .icon.owned {
   background-image: url(icons/ic_action_collection.png);
