--- a/arpatm/static/colours.less
+++ b/arpatm/static/colours.less
@@ -1,16 +1,42 @@
-@white: #F9F9F9;
-@black: #303030;
-@gray: #75706B;
+@white: #FAFAFA;
+@black: #000;
 
-@lightbluegrey: #cfd8dc;
+@grey: ##9E9E9E;
+@lightgrey: #F5F5F5;
+@darkgrey: #212121;
+
 @bluegrey: #607d8b;
-@darkbluegrey: #37474f;
+@lightbluegrey: #cfd8dc;
+@darkbluegrey: #263238;
 
-@blue: #70FFE1;
-@green: #B7E866;
-@yellow: #FFD17D;
-@red: #E86463;
-@purple: #9D70FF;
+@red: #E51C23;
+@lightred: #F9BDBB;
+@darkred: #B0120A;
 
-@main-background: @white;
+@purple: #9C27B0;
+@lightpurple: #E1BEE7;
+@darkpurple: #4A148C;
+
+@blue: #5677FC;
+@lightblue: #D0D9FF;
+@darkblue: #2A36B1;
+
+@cyan: #00BCD4;
+@lightcyan: #B2EBF2;
+@darkcyan: #006064;
+
+@green: #259B24;
+@lightgreen: #A3E9A4;
+@darkgreen: #0D5302;
+
+@yellow: #FFEB3B;
+@lightyellow: #FFFDE7;
+@darkyellow: #F57F17;
+
+@orange: #FF9800;
+@lightorange: #FFE0B2;
+@darkorange: #E65100;
+
+
+@main-background: @darkgrey;
 @content-background: @white;
