--- a/arpatm/templates/header.html
+++ b/arpatm/templates/header.html
@@ -1,6 +1,6 @@
 <head>
     <h1>
-        ARPATM
+        <a href="/">ARPATM</a>
     </h1>
     <form action="/search">
         <input name="term" type=text" placeholder="Search for some animez" />
