--- a/arpatm/static/style.less
+++ b/arpatm/static/style.less
@@ -68,4 +68,6 @@ header#header, footer#footer {
 
 @import 'header.less';
 @import 'footer.less';
+@import 'index.less';
+@import 'search.less';
 @import 'anime.less';
