--- a/arpatm/templates/index/anime.html
+++ b/arpatm/templates/index/anime.html
@@ -1,11 +1,13 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<ul>
-  {% for a in anime %}
-    <li>
-      <a href="/anime/{{ a.id }}">{{ a.name or a.name_ro or a.name_jp }} ({{ a.files | length }} files)</a>
-    </li>
-  {% endfor %}
-</ul>
+<div class="index-anime">
+    <ul>
+      {% for a in anime %}
+        <li>
+          <a href="/anime/{{ a.id }}">{{ a.name or a.name_ro or a.name_jp }} ({{ a.files | length }} files)</a>
+        </li>
+      {% endfor %}
+    </ul>
+</div>
 {% endblock %}
