--- a/arpatm/templates/search.html
+++ b/arpatm/templates/search.html
@@ -1,11 +1,13 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<ul>
-    {% for result in results %}
-    <li>
-        <a href="/anime/{{ result[1] }}">{{ result[0] }}</a>
-    </li>
-    {% endfor %}
-</ul>
+<div class="search">
+    <ul>
+        {% for result in results %}
+        <li>
+            <a href="/anime/{{ result[1] }}">{{ result[0] }}</a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
 {% endblock %}
