--- a/arpatm/templates/header.html
+++ b/arpatm/templates/header.html
@@ -1,8 +1,8 @@
-<head>
-    <h1>
+<header id="site-header">
+    <h1 id="site-title">
         <a href="/">ARPATM</a>
     </h1>
-    <form action="/search">
+    <form action="/search" id="site-search">
         <input name="term" type=text" placeholder="Search for some animez" />
     </form>
-</head>
+</header>
