--- a/arpatm/templates/links.html
+++ b/arpatm/templates/links.html
@@ -1,1 +1,2 @@
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
